--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,4 +31,6 @@
     </div>
 </div>
 
+<script src="/js/home.js"></script>
 <script src="/js/home_post.js"></script>
+<script src="/js/home_comment.js"></script>
