Added Google OAuth2

--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,4 +1,6 @@
-<div>
+<link rel="stylesheet" href="/css/sign-in.css">
+
+<div id="sign-in">
     <h5>Codial Sign In</h5>
     <form action="./create-session" method="post">
         <div>
@@ -11,4 +13,5 @@
         </div>
         <button type="submit">Log In</button>
     </form>
+    <a href="/user/oauth/google"><img src="/images/google.jpg"></a>
 </div>
