--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/css/home.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,0,0" />
 
 <div id="home">
     <% if (locals.user){ %>
@@ -34,3 +34,4 @@
 <script src="/js/home.js"></script>
 <script src="/js/home_post.js"></script>
 <script src="/js/home_comment.js"></script>
+<script src="/js/home_like.js"></script>
