--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -14,13 +14,31 @@
         <% } %>
     </div>
     <p class="content"><%=i.content%></p>
-    <% if (locals.user){ %>
-        <form action="/comment/create" method="post" class="comment-post" id="comment-form">
-            <input type="text" name="content" placeholder="Write comment here!" required>
-            <input hidden="true" type="text" name="post" value="<%=i.id%>">
-            <button type="submit">Post</button>
-        </form>
-    <%}%>
+    <div class="likes-comments">
+        <% if (locals.user){ %>
+            <a href="/like/?id=<%= i.id%>&onModel=Post">
+                <span class="material-symbols-outlined like">
+                    thumb_up
+                </span>
+            </a>
+        <% } else { %>
+            <a>
+                <span class="material-symbols-outlined">
+                    thumb_up
+                </span>
+            </a>        
+        <%}%> 
+        <span class="like-count">
+            <%=i.likes.length%>
+        </span>
+        <% if (locals.user){ %>
+            <form action="/comment/create" method="post" class="comment-post" id="comment-form">
+                <input type="text" name="content" placeholder="Write comment here!" required>
+                <input hidden="true" type="text" name="post" value="<%=i.id%>">
+                <button type="submit">Post</button>
+            </form>
+        <%}%>
+    </div>
 
     <div class="comment-container">
         <% for (j = 0; j < i.comments.length; j++){%>
