--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -7,7 +7,7 @@
         </div>
         <% if (locals.user && user.id === i.user.id){ %>
         <a href="/post/delete/<%= i.id%>">
-            <span class="material-symbols-outlined" id="delete-post">
+            <span class="material-symbols-outlined delete-post">
                 delete
             </span>
         </a>
