--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -17,6 +17,10 @@ a{
     color: black;
 }
 
+button, input[type="submit"]{
+    cursor: pointer;
+}
+
 /* Body Section */
 body{
     display: flex;
@@ -63,7 +67,6 @@ body{
                         color: white;
                         background-color: transparent;
                         border: 1px solid white;
-                        cursor: pointer;
                         border-radius: 4px;
                         transition: all .2s ease-in-out;
         
