--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -22,7 +22,6 @@
       color: #212529;
       background-color: transparent;
       border: 1px solid #212529;
-      cursor: pointer;
       border-radius: 4px;
       transition: all .2s ease-in-out; }
       #home > form input[type="submit"]:hover {
@@ -83,8 +82,7 @@
               padding: 0.1rem;
               margin: 0 .6rem; }
             #home > div section .card .likes-comments .comment-post button {
-              padding: .1rem;
-              cursor: pointer; }
+              padding: .1rem; }
         #home > div section .card .comments {
           padding: .3em 0;
           margin-left: 2em;
@@ -94,7 +92,7 @@
             font-size: .85em; }
     #home > div aside {
       width: 20%; }
-      #home > div aside .friends {
+      #home > div aside .user-mini {
         background-color: rgba(255, 255, 255, 0.55);
         display: flex;
         align-items: center;
@@ -102,10 +100,10 @@
         font-size: .85rem;
         margin: .2rem 0;
         border: 1px solid #dee0e1; }
-        #home > div aside .friends img {
+        #home > div aside .user-mini img {
           height: 2.5rem;
           width: 2.5rem;
           margin-right: .2rem; }
-        #home > div aside .friends div > :first-child {
+        #home > div aside .user-mini div > :first-child {
           font-weight: 500;
           font-size: .9rem; }
