--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,11 +18,14 @@
     <!-- Default Style Sheet -->
     <link rel="stylesheet" href="/css/layout.css">
 
-    <!-- JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-
+    <!-- Chat Engine Style -->
+    <link rel="stylesheet" href="/css/chat_box.css">
+    
     <!-- Components Style Sheet -->
     <%- style%>
+
+    <!-- JQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="header">
@@ -37,10 +40,13 @@
         <%- include("_footer")%>
     </div>
 
+    <div id="chat-boxes">
+        <%- include("_chat_box")%>
+    </div>
+
     <!-- Scripts Section -->
     <script src="/js/master.js"></script>
-    <%- script%>
-
+    
     <% if (flash.success && flash.success.length > 0) { %>
         <script>
             success("<%= flash.success %>");
@@ -58,6 +64,14 @@
             warning("<%= flash.warning %>");
         </script>
     <% } %>
+
+    <!-- Components Scripts -->
+    <%- script%>
+
+    <!-- Chat Engine Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.2/socket.io.min.js" integrity="sha512-xzC4RSo+4m1clLhr0pQr6yFjO9bJ0py6+l65SBibI8/pSEU8U4iVZ7xm95WRq8PXw2MKv8SSR3QkqR2jciG5Ug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/js/chat_engine.js"></script>
+    
 
 </body>
 </html>
