Added auto scroll chat

--- a/assets/scss/chat_box.scss
+++ b/assets/scss/chat_box.scss
@@ -54,7 +54,7 @@ $background-color: rgb(241, 242, 242);
             flex-grow: 1;
             height: 20rem;
             display: flex;
-            flex-direction: column;
+            flex-direction: column-reverse;
             align-items: flex-start;
             overflow-y: scroll;
 
