--- a/assets/css/chat_box.css
+++ b/assets/css/chat_box.css
@@ -37,7 +37,7 @@
       flex-grow: 1;
       height: 20rem;
       display: flex;
-      flex-direction: column;
+      flex-direction: column-reverse;
       align-items: flex-start;
       overflow-y: scroll; }
       #chat-boxes .chat-container .message li {
