--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/profile.css">
+<link rel="stylesheet" href=<%=assetPath("/css/profile.css")%>>
 
 <div id="profile">
     
@@ -32,4 +32,4 @@
 
 </div>
 
-<script src="/js/profile/profile.js"></script>
+<script src=<%=assetPath("/js/profile/profile.js")%>></script>
