--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href=<%=assetPath("/css/home.css")%>>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,0,0" />
 
 <div id="home">
@@ -63,6 +63,6 @@
     </div>
 </div>
 
-<script src="/js/home/home_post.js"></script>
-<script src="/js/home/home_comment.js"></script>
-<script src="/js/home/home_like.js"></script>
+<script src=<%=assetPath("/js/home/home_post.js")%>></script>
+<script src=<%=assetPath("/js/home/home_comment.js")%>></script>
+<script src=<%=assetPath("/js/home/home_like.js")%>></script>
