--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/sign-in.css">
+<link rel="stylesheet" href=<%=assetPath("/css/sign-in.css")%>>
 
 <div id="sign-in">
     <h5>Codial Sign In</h5>
