--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -2,7 +2,7 @@
     <div>© 2022 Bhanu Pratap Singh Rathore</div>
 
     <div>
-        <a href="/home"><li>Home</li></a>
+        <a href="/"><li>Home</li></a>
         <% if (locals.user){%>
             <a href="/user/profile/<%= user.id%>"><li>profile</li></a>
             <a href="/user/sign-out"><li>sign-out</li></a>
