--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <a href="/home"><div>Codeial</div></a>
+    <a href="/"><div>Codeial</div></a>
 
     <div>
     <% if (locals.user){%>
